# genawaiter2

./: CHANGELOG.md  Cargo.toml  README-crates-io.md  README.md
examples/: error_propagation.rs  linked_list.rs  recursion.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
genawaiter-macro/: Cargo.toml
genawaiter-macro/src/: lib.rs
genawaiter-proc-macro/: Cargo.toml
genawaiter-proc-macro/src/: lib.rs
genawaiter2-macro/: Cargo.toml
genawaiter2-macro/src/: lib.rs
genawaiter2-proc-macro/: Cargo.toml
genawaiter2-proc-macro/src/: lib.rs  visit.rs
src/: core.rs  lib.rs  macros.rs
src/rc/: generator.rs  mod.rs  stream.rs
src/stack/: engine.rs  generator.rs  macros.rs  mod.rs  nightly_tests.rs  stream.rs
src/sync/: boxed.rs  generator.rs  mod.rs  stream.rs
tests/: rc.rs  stack.rs  sync.rs
tests/ui/: fail_producer_with_argument.rs  fail_producer_with_argument.stderr  rc_fail_not_awaiting_yield.rs  rc_fail_not_awaiting_yield.stderr  stack_fail_not_awaiting_yield.rs  stack_fail_not_awaiting_yield.stderr  stack_fail_when_co_is_static.rs  stack_fail_when_co_is_static.stderr  sync_fail_not_awaiting_yield.rs  sync_fail_not_awaiting_yield.stderr
