# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "genawaiter2"
version = "0.99.1"
authors = ["John Simon <john@whatisaph.one>"]
edition = "2021"
license = "MIT"
description = "Stackless generators on stable Rust."
repository = "https://github.com/romac/genawaiter2"
documentation = "https://docs.rs/genawaiter2"
readme = "README.md"
keywords = ["generator", "yield", "coroutine", "async", "await"]
categories = ["asynchronous", "concurrency", "rust-patterns"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[dependencies]
futures-core = { version = "0.3.1", optional = true }
genawaiter2-proc-macro = { version = "0.1.0", path = "./genawaiter2-proc-macro", optional = true }
genawaiter2-macro = { version = "0.1.0", path = "./genawaiter2-macro" }

[workspace]
members = ["genawaiter2-macro", "genawaiter2-proc-macro"]

[dev-dependencies]
futures = "0.3.1"
once_cell = "1.3.1"
rustversion = "1.0.2"
trybuild = "1"

[features]
default = ["proc_macro", "rc", "sync"]
stream = ["dep:futures-core"]
nightly = []
proc_macro = ["dep:genawaiter2-proc-macro", "genawaiter2-macro/proc_macro"]
rc = []
std = []
sync = ["std"]
