[package]
name = "genawaiter2-proc-macro"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "procedural macro for generators (genawaiter2)"
edition = "2018"
repository = "https://github.com/romac/genawaiter2"
readme = "../README.md"
keywords = ["generator", "yield", "coroutine", "async", "await"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["visit-mut", "full"] }
proc-macro-error = "1.0"
proc-macro-hack = "0.5"
